--- a/src/index.html
+++ b/src/index.html
@@ -1,71 +1,77 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>ZTBL</title>
-        <meta charset="utf-8">
-        <meta
-            name="description"
-            content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
-        <meta
-            name="keywords"
-            content="Fuse,HTML,CSS,Angular,Angular 2,Angular 10,Angular 11,Angular 12,Material,Material 2,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
-        <meta
-            name="viewport"
-            content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
+<head>
+    <title>ZTBL</title>
+    <meta charset="utf-8">
+    <meta
+        name="description"
+        content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
+    <meta
+        name="keywords"
+        content="Fuse,HTML,CSS,Angular,Angular 2,Angular 10,Angular 11,Angular 12,Material,Material 2,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
+    <meta
+        name="viewport"
+        content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
 
-        <base href="/">
+    <base href="/">
 
-        <!-- Favicon -->
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon-16x16.png">
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon-32x32.png">
+    <!-- Favicon -->
+    <link
+        rel="icon"
+        type="image/png"
+        href="favicon-16x16.png">
+    <link
+        rel="icon"
+        type="image/png"
+        href="favicon-32x32.png">
 
-        <!-- Fonts -->
-        <link
-            href="assets/fonts/inter/inter.css"
-            rel="stylesheet">
+    <!-- Fonts -->
+    <link
+        href="assets/fonts/inter/inter.css"
+        rel="stylesheet">
 
-        <link
-            href="https://fonts.gstatic.com"
-            rel="preconnect">
-        <link
-            href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap"
-            rel="stylesheet">
+    <link
+        href="https://fonts.gstatic.com"
+        rel="preconnect">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap"
+        rel="stylesheet">
 
-        <!-- Icon fonts -->
-        <link
-            href="https://fonts.googleapis.com/icon?family=Material+Icons"
-            rel="stylesheet">
+    <!-- Icon fonts -->
+    <link
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
 
-        <!-- Splash screen styles -->
-        <link
-            href="assets/styles/splash-screen.css"
-            rel="stylesheet">
+    <!-- Splash screen styles -->
+    <link
+        href="assets/styles/splash-screen.css"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    </head>
 
-    <body>
+</head>
 
-        <!-- Splash screen -->
-        <fuse-splash-screen>
-            <img
-                src="assets/images/logo/logo.svg"
-                alt="Fuse logo">
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
-        </fuse-splash-screen>
+<body>
 
-        <!-- App root -->
-        <app-root></app-root>
+<!-- Splash screen -->
+<fuse-splash-screen>
+    <img
+        src="assets/images/logo/logo.svg"
+        alt="Fuse logo">
+    <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+    </div>
+</fuse-splash-screen>
 
-    </body>
+<!-- App root -->
+<app-root></app-root>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+</body>
 
 </html>
