--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta
         name="description"
-        content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
+        content="ZTBL (Zarai Taraqiati Bank Islamabad)">
     <meta
         name="keywords"
-        content="Fuse,HTML,CSS,Angular,Angular 2,Angular 10,Angular 11,Angular 12,Material,Material 2,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
+        content="ZTBL,PakistanBank,Kisaan,ztblbank">
     <meta
         name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
@@ -46,7 +46,6 @@
     <link
         href="assets/styles/splash-screen.css"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/image-zoom.css">
 
 
 </head>
@@ -67,7 +66,6 @@
 
 <!-- App root -->
 <app-root></app-root>
-<script src="assets/scripts/image-zoom.js" type="text/javascript"></script>
 
 </body>
 <script>
@@ -90,23 +88,5 @@
             document.getElementById('arrow').innerHTML = 'keyboard_arrow_down'
         }
     }
-
-    $(document).ready(function () {
-
-        // Image zoom plugin code
-        var zoomImage = $('#imageZoom');
-        var zoomImageExtra = $('#imageZoomExtra');
-        var zoomImagePlus = $('#imageZoomExtraPlus');
-        var zoomImages = $('.zoom-images');
-
-        zoomImage.imageZoom();
-        zoomImageExtra.imageZoom({zoom: 200});
-        zoomImagePlus.imageZoom({zoom: 300});
-
-        zoomImages.each(function () {
-            $(this).imageZoom();
-        });
-
-    });
 </script>
 </html>
