FOnt awesome icons

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,10 @@
     <link
         href="assets/styles/splash-screen.css"
         rel="stylesheet">
+    <link
+        href="assets/styles/font-awesome.min.css"
+        rel="stylesheet">
+    
 
 
 </head>
