--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     <img
         src="assets/images/logo/logo.svg"
         alt="Fuse logo">
-        <div class="text-5xl py-4">
+        <div class="text-5xl pt-2">
             Zarai Taraqiati Bank Limited
         </div>
     <div class="spinner">
